--- a/DBSYS_SS15/src/de/dbsys/view/root/rootLayout/RootLayout.fxml
+++ b/DBSYS_SS15/src/de/dbsys/view/root/rootLayout/RootLayout.fxml
@@ -7,7 +7,7 @@
 
 <SplitPane fx:id="root" dividerPositions="0.4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
    <items>
-      <BorderPane fx:id="parentA" prefHeight="200.0" prefWidth="200.0" />
-      <BorderPane fx:id="parentB" prefHeight="200.0" prefWidth="200.0" />
+      <BorderPane fx:id="parentA" />
+      <BorderPane fx:id="parentB" />
    </items>
 </SplitPane>
