--- a/DBSYS_SS15/src/de/dbsys/view/root/Bside/searchLayout/SearchLayout.fxml
+++ b/DBSYS_SS15/src/de/dbsys/view/root/Bside/searchLayout/SearchLayout.fxml
@@ -6,15 +6,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40">
 	 <children>
-            <Button defaultButton="true" layoutX="174.0" layoutY="398.0" mnemonicParsing="false" prefWidth="380.0" text="Wohnung suchen!" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
-            <DatePicker layoutX="119.0" layoutY="44.0" prefWidth="150.0" promptText="von" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="45.0" />
-            <DatePicker layoutX="269.0" layoutY="44.0" prefWidth="150.0" promptText="bis" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="45.0" />
+            <Button defaultButton="true" layoutX="174.0" layoutY="398.0" mnemonicParsing="false" onAction="#handleApartementSearch" prefWidth="380.0" text="Wohnung suchen!" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
+            <DatePicker fx:id="anreiseDP" layoutX="119.0" layoutY="44.0" prefWidth="150.0" promptText="von" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="45.0" />
+            <DatePicker fx:id="abreiseDP" layoutX="269.0" layoutY="44.0" prefWidth="150.0" promptText="bis" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="45.0" />
             <ComboBox layoutX="146.0" layoutY="195.0" prefWidth="150.0" promptText="Anz.  Zimmer" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="125.0" />
-            <ComboBox editable="true" layoutX="17.0" layoutY="368.0" prefWidth="150.0" promptText="Land" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="125.0" />
-            <TextField alignment="CENTER_RIGHT" layoutX="29.0" layoutY="137.0" prefWidth="150.0" promptText="von" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="85.0" />
-            <TextField alignment="CENTER_RIGHT" layoutX="171.0" layoutY="137.0" prefWidth="150.0" promptText="bis" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="85.0" />
+            <ComboBox fx:id="landCB" editable="true" layoutX="17.0" layoutY="368.0" prefWidth="150.0" promptText="Land" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="125.0" />
+            <TextField fx:id="preisMinTF" alignment="CENTER_RIGHT" layoutX="29.0" layoutY="137.0" prefWidth="150.0" promptText="von" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="85.0" />
+            <TextField fx:id="preisMaxTF" alignment="CENTER_RIGHT" layoutX="171.0" layoutY="137.0" prefWidth="150.0" promptText="bis" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="85.0" />
             <Label layoutX="16.0" layoutY="119.0" text="Preis" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="82.0" />
             <ListView layoutX="276.0" layoutY="198.0" prefWidth="380.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="210.0" />
             <Label layoutX="16.0" layoutY="14.0" text="Ferienwohnung suchen" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
@@ -25,7 +25,6 @@
             <Label layoutX="15.0" layoutY="48.0" text="Reisezeit" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="47.0" />
             <Label layoutX="20.0" layoutY="129.0" text="Land und &#10;Zimmer" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="120.0" />
             <Label layoutX="325.0" layoutY="171.0" text="Wohnungsausstattungen&#10;hinzufügen" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="160.0" />
-            <ComboBox editable="true" layoutX="250.0" layoutY="167.0" prefWidth="240.0" promptText="Ausstattung" AnchorPane.leftAnchor="160.0" AnchorPane.topAnchor="165.0" />
+            <ComboBox fx:id="ausstattungCB" editable="true" layoutX="250.0" layoutY="167.0" prefWidth="240.0" promptText="Ausstattung" AnchorPane.leftAnchor="160.0" AnchorPane.topAnchor="165.0" />
          </children>
 </AnchorPane>
-
