edited BookingConfirmation and changed the constructor of it

--- a/DBSYS_SS15/src/de/dbsys/view/root/Bside/bookingConfirmation/BookingConfirmation.fxml
+++ b/DBSYS_SS15/src/de/dbsys/view/root/Bside/bookingConfirmation/BookingConfirmation.fxml
@@ -6,28 +6,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40">
 	<children>
-		<Button defaultButton="true" layoutX="174.0" layoutY="398.0"
-			mnemonicParsing="false" prefWidth="380.0" text="Buchung bestätigen"
-			AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
-			AnchorPane.topAnchor="390.0" />
-		<Label layoutX="16.0" layoutY="14.0" text="Buchungsbestätigung"
-			AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
+		<Button defaultButton="true" layoutX="174.0" layoutY="398.0" mnemonicParsing="false" onAction="#handleConfirmBooking" prefWidth="380.0" text="Buchung bestätigen" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="390.0" />
+		<Label layoutX="16.0" layoutY="14.0" text="Buchungsbestätigung" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
 			<font>
 				<Font size="16.0" />
 			</font>
 		</Label>
-		<TextArea layoutX="-17.0" layoutY="89.0" prefHeight="150.0"
-			prefWidth="380.0" promptText="Wohnungsdetails" AnchorPane.leftAnchor="10.0"
-			AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0" />
-		<TextArea layoutX="10.0" layoutY="213.0" prefHeight="150.0"
-			prefWidth="380.0" promptText="Buchungsdetails" AnchorPane.leftAnchor="10.0"
-			AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="213.0" />
-		<Button cancelButton="true" layoutX="184.0" layoutY="408.0"
-			mnemonicParsing="false" prefWidth="380.0" text="Zur Auswahl zurückkehren"
-			AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0"
-			AnchorPane.rightAnchor="20.0" />
+		<TextArea fx:id="wohnungDetailTA" layoutX="-17.0" layoutY="89.0" prefHeight="150.0" prefWidth="380.0" promptText="Wohnungsdetails" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0" />
+		<TextArea fx:id="buchungDetailTA" layoutX="10.0" layoutY="213.0" prefHeight="150.0" prefWidth="380.0" promptText="Buchungsdetails" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="213.0" />
+		<Button cancelButton="true" layoutX="184.0" layoutY="408.0" mnemonicParsing="false" onAction="#handleReturnSelection" prefWidth="380.0" text="Zur Auswahl zurückkehren" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
 	</children>
 </AnchorPane>
-
