--- a/DBSYS_SS15/src/de/dbsys/view/root/Aside/registerLayout/RegisterLayout.fxml
+++ b/DBSYS_SS15/src/de/dbsys/view/root/Aside/registerLayout/RegisterLayout.fxml
@@ -21,7 +21,7 @@
 		<Label layoutX="17.0" layoutY="232.0" text="Anschrift:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="230.0" />
 		<TextField fx:id="stadtTF" layoutX="182.0" layoutY="375.0" promptText="Stadt" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="330.0" />
 		<TextField fx:id="hausNrTF" layoutX="180.0" layoutY="262.0" prefWidth="60.0" promptText="Hausnr." AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="275.0" />
-		<ComboBox fx:id="landCB" editable="true" layoutX="91.0" layoutY="363.0" prefWidth="150.0" promptText="Land" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="360.0" />
+		<ComboBox fx:id="landCB" layoutX="91.0" layoutY="363.0" prefWidth="150.0" promptText="Land" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="360.0" />
 		<TextField fx:id="plzTF" layoutX="14.0" layoutY="304.0" prefWidth="60.0" promptText="PLZ" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="330.0" />
 		<Label layoutX="131.0" layoutY="239.0" text="Straße und Hausnr." AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="255.0" />
 		<Label layoutX="14.0" layoutY="312.0" text="PLZ und Stadt" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="310.0" />
