--- a/DBSYS_SS15/src/de/dbsys/view/root/Aside/loggedInLayout/LoggedInLayout.fxml
+++ b/DBSYS_SS15/src/de/dbsys/view/root/Aside/loggedInLayout/LoggedInLayout.fxml
@@ -16,7 +16,7 @@
 		<Button layoutX="31.0" layoutY="249.0" mnemonicParsing="false" onAction="#handleLogout" text="Ausloggen" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" />
 		<Button layoutX="24.0" layoutY="53.0" mnemonicParsing="false" onAction="#handleBooking" text="Ausgewählte Ferienwohnung buchen" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="50.0" />
 		<Button fx:id="bewertungBTN" layoutX="24.0" layoutY="101.0" mnemonicParsing="false" onAction="#handleEvaluation" text="Letze Buchung bewerten" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="90.0" />
-		<Button layoutX="28.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleDataAdmin" text="Daten verwalten" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="130.0" />
+		<Button disable="true" layoutX="28.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleDataAdmin" text="Daten verwalten" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="130.0" />
 		<TextField fx:id="bewertungTF" layoutX="190.0" layoutY="101.0" prefHeight="25.0" prefWidth="87.0" promptText="Bewertung" AnchorPane.leftAnchor="180.0" AnchorPane.topAnchor="90.0" />
 	</children>
 </AnchorPane>
