--- a/DBSYS_SS15/src/de/dbsys/view/root/Bside/resultLayout/ResultLayout.fxml
+++ b/DBSYS_SS15/src/de/dbsys/view/root/Bside/resultLayout/ResultLayout.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
 <children>
 	<Button cancelButton="true" layoutX="174.0" layoutY="398.0" mnemonicParsing="false" onAction="#handleBackToSearch" prefWidth="380.0" text="Zurück zur Suche" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="10.0" />
-	<ListView fx:id="gefundeneWohnungLV" layoutX="10.0" layoutY="197.0" prefWidth="380.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="197.0" />
-	<TextArea fx:id="wohnungDetailTA" layoutX="10.0" prefHeight="150.0" prefWidth="380.0" promptText="Wohnungsdetails" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+	<ListView fx:id="gefundeneWohnungLV" layoutY="197.0" prefWidth="380.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="197.0" />
+	<TextArea fx:id="wohnungDetailTA" editable="false" layoutX="10.0" prefHeight="150.0" prefWidth="380.0" promptText="Wohnungsdetails" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
 	<Label layoutX="20.0" layoutY="174.0" text="Gefundene Wohnungen:" />
 </children>
 </AnchorPane>
